# mathison

./: .env.example  .eslintrc.json  .gitignore  ANALYSIS_MATHISON_VALUE_TO_MANKIND.md  ARCHITECTURE.md  AdviceFromCodex.md  BRIDGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTOR_CERTIFICATE.md  DEMO.md  DEPLOYMENT.md  GITHUB-PAGES-SETUP.md  GITHUB_MODELS_SETUP.md  GOVERNANCE_CLAIMS.md  LICENSE  MATHISON_INTEGRITY_PROOF.md  MATHISON_ORACLE_OI_MONOLITH v1.1.0  MATHISON_SEMANTIC_FORMULA.md  MERGE-GUIDE.md  Makefile  Mathison_Equation  NOTICE  PERMALINK-FOR-KAI.txt  PRODUCTION_REQUIREMENTS.md  PROVENANCE.md  PULL_REQUEST.md  QUICKSTART.md  README.md  RELEASE-NOTES-1.0.md  ROOT_CODEC.md  SBOM.cdx.json  SECURITY.md  THE_BOOk.md  THE_WHY_PROTOCOL.md  THREAT_MODEL.md  VERSION_LEDGER.json  VISION.md  docker-compose.yml  eslint.config.js  (+10 more)
.github/: PR-v1.0.0-MERGE.md
config/: authority.json  governance-capsule.json  governance.json
docs/: ANALYSIS_KAI_DEEP_REVIEW.md  ARCHITECTURE.md  CHANGELOG.md  CRYSTAL_ROADMAP.md  ENGINEERING_NOTES_THIN_WAIST.md  FULL_STACK_OVERVIEW.md  GENOME_AUDIT.md  GRPC.md  HARDWARE_OPTIMIZATION_ANALYSIS.md  JOBS_API.md  KAI_RED_TEAM_EXTENDED.md  MEMORY_API.md  MESH_DISCOVERY.md  MESH_E2EE.md  OI_API.md  OPENAPI.md  PATCHLOG.md  PLAY_STORE.md  PROVABLE_GOVERNANCE_COMPLETE.md  RECTOR_PACK.md  ROADMAP_EXECUTION.md  SYSTEM_OVERVIEW.md  THIN_WAIST_V0_1.md  WHY.md  api-graph-intelligence.md  api.md  architecture.md  cdi-spec.md  cif-spec.md  conformance.md  deployment.md  migration_map.md  mobile-deployment.md  (+4 more)
version-one/sdks/rust/: Cargo.toml  README.md
(+155 files in other folders)
