[package]
name = "mathison-sdk"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for Mathison API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
